--- a/style.css
+++ b/style.css
@@ -131,3 +131,32 @@ li a:hover {
   from {opacity: .4}
   to {opacity: 1}
 }
+
+.avaleht {
+	position: relative;
+	height: 800px;
+	background-image: url("https://cdn.pixabay.com/photo/2017/02/12/23/19/bar-2061319_1280.jpg");
+}
+.tutvustus {
+	color: #2F4F4F;
+	text-align: center;
+	position: relative;
+	font-family: Verdana;
+	top: 15%;
+}
+
+#ajad {
+	position: relative;
+	color: #2F4F4F;
+	left: 40%;
+	top: 30%;
+	font-size: 25px;
+}
+.kast {
+	position: relative;
+	left: 30%;
+	top: 10%;
+	height: 600px;
+	width: 500px;
+	background-color: hsla(30, 67%, 94%, 0.7);
+}
