--- a/style.css
+++ b/style.css
@@ -138,20 +138,43 @@ li a:hover {
 	background-image: url("https://cdn.pixabay.com/photo/2017/02/12/23/19/bar-2061319_1280.jpg");
 }
 .tutvustus {
-	color: #2F4F4F;
+	color: hsl(0,100%,10%);
 	text-align: center;
 	position: relative;
 	font-family: Verdana;
 	top: 15%;
+	line-height: 1.3;
 }
 
 #ajad {
 	position: relative;
-	color: #2F4F4F;
+	color: hsl(0,100%,10%);
 	left: 40%;
 	top: 30%;
 	font-size: 25px;
 }
+.header {
+	height: 120px;
+	margin: 10px auto;
+	border: 1px solid black;
+	background-image:  url("https://goo.gl/3REs1c")
+}
+
+.header > h1 {
+	color: gray;
+	font-family: Calibri;
+	font-weight: 120;
+	font-size: 64px;
+	text-transform: uppercase;
+	margin-left: 30px;
+	letter-spacing: 2px;
+	-webkit-text-fill-color: white;
+	-webkit-text-stroke-width: 2px;
+	position: absolute;
+	top: 0;
+	left: 30px;
+}
+
 .kast {
 	position: relative;
 	left: 30%;
@@ -159,4 +182,11 @@ li a:hover {
 	height: 600px;
 	width: 500px;
 	background-color: hsla(30, 67%, 94%, 0.7);
+	border: 1px solid black;
+	margin-top: 10px;
+}
+
+h2 {
+	text-decoration: underline;
+	letter-spacing: 1px;
 }
