--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+	font-family: Calibri;
+	font-size: 18px;
+	margin-left: 30px;
 }
 
 li a:hover {
@@ -141,8 +144,9 @@ li a:hover {
 	color: hsl(0,100%,10%);
 	text-align: center;
 	position: relative;
-	font-family: Verdana;
-	top: 15%;
+	font-family: Calibri;
+	font-size: 20px;
+	top: 10%;
 	line-height: 1.3;
 }
 
@@ -150,18 +154,17 @@ li a:hover {
 	position: relative;
 	color: hsl(0,100%,10%);
 	left: 40%;
-	top: 30%;
+	top: 10%;
 	font-size: 25px;
 }
 .header {
 	height: 120px;
-	margin: 10px auto;
 	border: 1px solid black;
 	background-image:  url("https://goo.gl/3REs1c")
 }
 
 .header > h1 {
-	color: gray;
+	color: hsl(0,100%,10%);
 	font-family: Calibri;
 	font-weight: 120;
 	font-size: 64px;
@@ -189,4 +192,9 @@ li a:hover {
 h2 {
 	text-decoration: underline;
 	letter-spacing: 1px;
+	font-weight: bold;
+}
+
+body {
+	background-color: hsla(30, 67%, 94%, 0.7);
 }
