--- a/style_Grete.css
+++ b/style_Grete.css
@@ -164,7 +164,7 @@ li a:hover {
 }
 
 .header > h1 {
-	color: hsl(0,100%,10%);
+	color: gray;
 	font-family: Calibri;
 	font-weight: 120;
 	font-size: 64px;
@@ -172,7 +172,7 @@ li a:hover {
 	margin-left: 30px;
 	letter-spacing: 2px;
 	-webkit-text-fill-color: white;
-	-webkit-text-stroke-width: 2px;
+	-webkit-text-stroke-width: 1px;
 	position: absolute;
 	top: 0;
 	left: 30px;
