--- a/style_Grete.css
+++ b/style_Grete.css
@@ -138,7 +138,7 @@ li a:hover {
 .avaleht {
 	position: relative;
 	height: 800px;
-	background-image: url("https://cdn.pixabay.com/photo/2017/02/12/23/19/bar-2061319_1280.jpg");
+	background-image: url("avalehe_pildid/avaleht-background.jpg");
 }
 .tutvustus {
 	color: hsl(0,100%,10%);
@@ -160,7 +160,7 @@ li a:hover {
 .header {
 	height: 120px;
 	border: 1px solid black;
-	background-image:  url("https://goo.gl/3REs1c")
+	background-image:  url("avalehe_pildid/website-header.jpg")
 }
 
 .header > h1 {
