--- a/style_Ralf.css
+++ b/style_Ralf.css
@@ -18,6 +18,9 @@ li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+	font-family: Calibri;
+	font-size: 18px;
+	margin-left: 30px;
 }
 
 li a:hover {
@@ -179,4 +182,14 @@ li a:hover {
 	position: absolute;
 	top: 0;
 	left: 30px;
+}
+footer {
+	position: relative;
+	top: 10px;
+	bottom: 0px;
+	width: 100%;
+	height: 120px;
+	background-color: #333;
+	color: white;
+	font-family: Calibri;
 }
