--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ img {
     background-size: cover;
 }
 
-#par {
+#par1 {
   float: left;
   width: 25%;
   height: 200px;
@@ -58,8 +58,37 @@ img {
   text-align: center;
   font-family: "Trebuchet MS", Helvetica, sans-serif;
   font-size: 25px;
-
-
+}
+#par2 {
+  float: left;
+  width: 25%;
+  height: 200px;
+  object-fit: cover;
+  background: rgba(255,255,255,0.5);
+  text-align: center;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+  font-size: 25px;
+}
+#par3 {
+  float: left;
+  width: 25%;
+  height: 200px;
+  object-fit: cover;
+  background: rgba(255,255,255,0.5);
+  text-align: center;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+  font-size: 25px;
+}
+#par4 {
+  float: left;
+  width: 25%;
+  height: 200px;
+  object-fit: cover;
+  background: rgba(255,255,255,0.5);
+  text-align: center;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+  font-size: 25px;
+}
 
 #sisemine_menuu_text {
     margin-top: 10px;
